--- a/experience.html
+++ b/experience.html
@@ -11,11 +11,11 @@ layout: page
 <div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
-      <div class="card-header">Senior Strategy & Innovation Officer</div>
+      <div class="card-header">Adjunct Professor</div>
       <div class="card-body">
-        <h5 class="card-title">EGI Foundation</h5>
-        <p class="card-text">CSI Manager</p>
-        <p class="card-text">From July 2022</p>
+        <h5 class="card-title">University of Turin - Department of Cultures, Politics and Society</h5>
+        <p class="card-text">History of Digital Technologies</p>
+        <p class="card-text">From Sep 2024</p>
       </div>
     </div>
   </div>
@@ -25,7 +25,27 @@ layout: page
       <div class="card-body">
         <h5 class="card-title">University of Turin - Department of Management</h5>
         <p class="card-text">Sustainability & Digital Transformation</p>
-        <p class="card-text">From Nov 2020</p>
+        <p class="card-text">From Sep 2023</p>
+      </div>
+    </div>
+   <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Adjunct Professor</div>
+      <div class="card-body">
+        <h5 class="card-title">University of Turin - Department of Management</h5>
+        <p class="card-text">Digital Transformation for No Profit</p>
+        <p class="card-text">From Sep 2022</p>
+      </div>
+    </div>
+  </div>
+<div class="row"></div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Senior Strategy & Innovation Officer</div>
+      <div class="card-body">
+        <h5 class="card-title">EGI Foundation</h5>
+        <p class="card-text">Senior Strategy & Innovation Officer</p>
+        <p class="card-text">From July 2022</p>
       </div>
     </div>
   </div>
@@ -39,8 +59,6 @@ layout: page
       </div>
     </div>
   </div>
-</div>
-<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Senior System Engineer</div>
@@ -50,8 +68,9 @@ layout: page
         <p class="card-text">From May 2011 to Jun 2020</p>
       </div>
     </div>
-  </div>
-  <div class="col-lg-4">
+</div>
+<div class="row">
+   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Corporate Business Solution Manager</div>
       <div class="card-body">
@@ -84,12 +103,35 @@ layout: page
     <div class="card mb-3">
       <div class="card-header">Startup Mentor</div>
       <div class="card-body">
+        <h5 class="card-title">Plug and Play Torino</h5>
+        <p class="card-text">Mentorship for the TakeOff programs.</p>
+        <p class="card-text">May 2023</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Startup Mentor</div>
+      <div class="card-body">
+        <h5 class="card-title">Techstars Torino</h5>
+        <p class="card-text">Mentorship for the Techstars Transformative World Torino programs.</p>
+        <p class="card-text">Jan 2022</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-lg-4">
+    <div class="card mb-3">
+      <div class="card-header">Startup Mentor</div>
+      <div class="card-body">
         <h5 class="card-title">Impact Hub Milano</h5>
         <p class="card-text">Mentorship for the Impact Hub programs.</p>
         <p class="card-text">Nov 2020</p>
       </div>
     </div>
   </div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Startup Mentor</div>
@@ -110,8 +152,6 @@ layout: page
       </div>
     </div>
   </div>
-</div>
-<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Mentor</div>
@@ -122,6 +162,8 @@ layout: page
       </div>
     </div>
   </div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Guest Speaker</div>
@@ -142,8 +184,6 @@ layout: page
       </div>
     </div>
   </div>
-</div>
-<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Skill Mentor</div>
@@ -154,6 +194,8 @@ layout: page
       </div>
     </div>
   </div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Solutions Architect - Pro Bono</div>
