--- a/experience.html
+++ b/experience.html
@@ -28,7 +28,8 @@ layout: page
         <p class="card-text">From Sep 2023</p>
       </div>
     </div>
-   <div class="col-lg-4">
+  </div>  
+  <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Adjunct Professor</div>
       <div class="card-body">
@@ -38,7 +39,8 @@ layout: page
       </div>
     </div>
   </div>
-<div class="row"></div>
+</div>
+<div class="row">
   <div class="col-lg-4">
     <div class="card mb-3">
       <div class="card-header">Senior Strategy & Innovation Officer</div>
@@ -68,6 +70,7 @@ layout: page
         <p class="card-text">From May 2011 to Jun 2020</p>
       </div>
     </div>
+  </div>
 </div>
 <div class="row">
    <div class="col-lg-4">
